--- a/app/src/main/res/layout/item_all.xml
+++ b/app/src/main/res/layout/item_all.xml
@@ -13,15 +13,15 @@
         android:layout_marginVertical="4dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_item_color" />
-
+        android:background="@drawable/bg_item_color"
+        />
     <androidx.cardview.widget.CardView
         android:id="@+id/box_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:cardCornerRadius="16dp"
         android:backgroundTint="@color/white"
+        app:cardCornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -43,10 +43,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="18dp"
-        android:fontFamily="@font/nunito_extrabold"
-        android:text="C++"
-        android:maxLines="1"
         android:ellipsize="end"
+        android:fontFamily="@font/nunito_extrabold"
+        android:maxLines="1"
+        android:text="C++"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@id/view"
@@ -60,9 +60,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="18dp"
+        android:ellipsize="end"
         android:fontFamily="@font/nunito_semi_bold"
         android:maxLines="3"
-        android:ellipsize="end"
         android:text="@string/descreption"
         android:textColor="@color/white"
         android:textSize="16sp"
