--- a/app/src/main/res/layout/item_top.xml
+++ b/app/src/main/res/layout/item_top.xml
@@ -23,6 +23,8 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/nunito_extrabold"
         android:text="C++"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
