--- a/app/src/main/res/layout/item_all.xml
+++ b/app/src/main/res/layout/item_all.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginVertical="4dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="10dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/bg_item_color"
         />
@@ -19,11 +19,11 @@
         android:id="@+id/box_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
         android:backgroundTint="@color/white"
         app:cardCornerRadius="16dp"
+        android:layout_marginStart="6dp"
+        app:layout_constraintStart_toStartOf="@id/view"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
